Add id to search button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <input class="form-control py-2 border-right-0 border" placeholder="Searchterm..." type="search"
                   value="" id="userquery">
                 <span class="input-group-append">
-                  <button class="btn btn-outline-info border-left-0 border p-2" type="button">
+                  <button class="btn btn-outline-info border-left-0 border p-2" type="button" id="searchbutton">
                     <i class="fa fa-search"></i>
                   </button>
                 </span>
