--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <input class="form-control py-2 border-right-0 border" placeholder="Searchterm..." type="search"
                   value="" id="userquery">
                 <span class="input-group-append">
-                  <button class="btn btn-outline-info border-left-0 border p-2" type="button">
+                  <button class="btn btn-outline-info border-left-0 border p-2" type="button" id="searchbutton">
                     <i class="fa fa-search"></i>
                   </button>
                 </span>
@@ -182,6 +182,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="JS/app.js"></script>
 </body>
 
 </html>
