added empty div for displaying output

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
               </div>
             </div>
             </form>
+            <div class="movies"></div>
+            <div class="games"></div>
+            <div class="books"></div>
 
           </div>
 
