--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
               </div>
             </div>
             </form>
-            <div class="movies"></div>
-            <div class="games"></div>
-            <div class="books"></div>
+            <div id="movies"></div>
+            <div id="games"></div>
+            <div id="books"></div>
 
           </div>
 
