Add javascript to get game data and CSS to render gamedata

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       <div class="col d-flex flex-column h-100 maincontent">
         <main class="row mb-3 mt-2">
           <div class="col pt-4">
-            <h3 class="text-white text-center text-decoration-underline fs-1">Welcome to Fleresearch, where we make more,less!</h3>
+            <h3 class="text-white text-center text-decoration-underline fs-1">Welcome to Fleresearch, where we make
+              more,less!</h3>
             <p class="lead text-primary">Fill in the search bar,select the expected results and off we go</p>
 
             <div class="col-3 mb-4">
@@ -141,11 +142,8 @@
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                 data-bs-parent="#accordionExample">
-                <div class="accordion-body" id="gamesdiv">
-                  <p>GameDIV</p>
-                  <div class="row g-4">
-                    <div class="col bg-primary"></div>
-                  </div>
+                <div class="accordion-body mb-4" id="gamesdiv">
+
                 </div>
               </div>
             </div>
