--- a/index.html
+++ b/index.html
@@ -118,15 +118,14 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
+                  aria-expanded="false" aria-controls="collapseOne">
                   BOOKS <span class="ms-4 text-success bookresults"></span>
                 </button>
               </h2>
 
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body" id="booksdiv">
-                  <p>BOOKSDIV</p>
                   <div class="row g-4">
                     <div class="col bg-primary"></div>
                   </div>
@@ -157,17 +156,16 @@
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body" id="moviesdiv">
-                  <p>MOVIEDIV</p>
-                  <div class="row g-4">
-                    <div class="col bg-primary"></div>
-                  </div>
+                  
                 </div>
               </div>
             </div>
           </div>
         </main>
-        <footer class="row bg-primary py-4 mt-auto">
-          <div class="col"> Bottom footer content here... </div>
+        <footer class="row bg-TRANSPARENT py-4 mt-auto">
+          <div class="col text-center">
+            <p class="fs-1 text-success">Footer Here</p>
+          </div>
         </footer>
       </div>
     </div>
@@ -180,7 +178,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="JS/app.js"></script>
 </body>
 
