--- a/index.html
+++ b/index.html
@@ -2,185 +2,181 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fleresearch</title>
-<link rel="icon" href="images/site.png">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet"
-href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
-integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
-</link>
-<link rel="stylesheet" href="CSS/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fleresearch</title>
+  <link rel="icon" href="images/site.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+  </link>
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
 
-<div class="container-fluid overflow-hidden">
-<div class="row vh-100 overflow-auto">
-<div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
-<div
-class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
-<a href="#" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
-<span class="fs-5">Fleresearch</span></span>
-</a>
-<ul
-class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start"
-id="menu">
-<li class="nav-item">
-<a href="#" class="nav-link px-sm-0 px-2">
-<i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline">Home</span>
-</a>
-</li>
-<li>
-<a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
-<i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">About</span> </a>
-</li>
-<li>
-<a href="#" class="nav-link px-sm-0 px-2">
-<i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Search</span></a>
-</li>
-<li class="dropdown">
-<a href="#" class="nav-link dropdown-toggle px-sm-0 px-2" id="dropdown" data-bs-toggle="dropdown"
-aria-expanded="false">Members</a>
-<ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdown">
-<li><a class="dropdown-item" href="#">Marvin</a></li>
-<li><a class="dropdown-item" href="#">Caleb</a></li>
-<li><a class="dropdown-item" href="#">Alberto</a></li>
-<li>
-<hr class="dropdown-divider">
-</li>
-<li><a class="dropdown-item" href="#">Repository</i></a></li>
-</ul>
-</li>
-</ul>
-<div class="py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
-<a href="#" class="d-flex align-items-center text-white text-decoration-none" id="dropdownUser1"
-data-bs-toggle="dropdown" aria-expanded="false">
-<img src="images/4p5ayd2d9pv41.png" alt="paineleme.jpg" width="28" height="28" class="rounded-circle">
-<span class="d-none d-sm-inline mx-1">&copy2022</span>
-</a>
-</div>
-</div>
-</div>
-<div class="col d-flex flex-column h-100 maincontent">
-<main class="row mb-3 mt-2">
-<div class="col pt-4">
-<h3 class="text-white text-center text-decoration-underline fs-1">Welcome to Fleresearch, where we make
-more,less!</h3>
-<p class="lead text-primary">Fill in the search bar,select the expected results and off we go</p>
+  <div class="container-fluid overflow-hidden">
+    <div class="row vh-100 overflow-auto">
+      <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark bg-opacity-50 d-flex sticky-top">
+        <div
+          class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
+          <a href="#" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <span class="fs-5">Fleresearch</span></span>
+          </a>
+          <ul
+            class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start"
+            id="menu">
+            <li class="nav-item">
+              <a href="#" class="nav-link px-sm-0 px-2">
+                <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline">Home</span>
+              </a>
+            </li>
+            <li>
+              <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
+                <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">About</span> </a>
+            </li>
+            <li>
+              <a href="#" class="nav-link px-sm-0 px-2">
+                <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Search</span></a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="nav-link dropdown-toggle px-sm-0 px-2" id="dropdown" data-bs-toggle="dropdown"
+                aria-expanded="false">Members</a>
+              <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdown">
+                <li><a class="dropdown-item" href="#">Marvin</a></li>
+                <li><a class="dropdown-item" href="#">Caleb</a></li>
+                <li><a class="dropdown-item" href="#">Alberto</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Repository</i></a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
+            <a href="#" class="d-flex align-items-center text-white text-decoration-none" id="dropdownUser1"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="images/4p5ayd2d9pv41.png" alt="paineleme.jpg" width="28" height="28" class="rounded-circle">
+              <span class="d-none d-sm-inline mx-1">&copy2022</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex flex-column h-100 maincontent">
+        <main class="row mb-3 mt-2">
+          <div class="col pt-4">
+            <h3 class="text-white text-center text-decoration-underline fs-1">Welcome to Fleresearch, where we make
+              more,less!</h3>
+            <p class="lead text-primary">Fill in the search bar,select the expected results and off we go</p>
 
-<div class="col-3 mb-4">
-<div class="input-group col-md-4">
-<input class="form-control py-2 border-right-0 border" placeholder="Searchterm..." type="search"
-value="" id="userquery">
-<span class="input-group-append">
-<button class="btn btn-outline-info border-left-0 border p-2" type="button" id="searchbutton">
-<i class="fa fa-search"></i>
-</button>
-</span>
-</div>
-</div>
+            <div class="col-3 mb-4">
+              <div class="input-group col-md-4">
+                <input class="form-control py-2 border-right-0 border" placeholder="Searchterm..." type="search"
+                  value="" id="userquery">
+                <span class="input-group-append">
+                  <button class="btn btn-outline-info border-left-0 border p-2" type="button" id="searchbutton">
+                    <i class="fa fa-search"></i>
+                  </button>
+                </span>
+              </div>
+            </div>
 
-</div>
+          </div>
 
-<div class="row mb-5" id="options">
-<div class="col-1 s4">
-<div class="">
-<label>
-<input class="check" type="checkbox" id="bookcheck">
-<span for="book-op">Book</span>
-</label>
-</div>
-</div>
-<div class="col-1 s4">
-<div class="">
-<label>
-<input class="check" type="checkbox" id="moviecheck">
-<span for="movie-op">Movie</span>
-</label>
-</div>
-</div>
-<div class="col-1 s4">
-<div class="">
-<label>
-<input class="check" type="checkbox" id="gamecheck">
+          <div class="row mb-5" id="options">
+            <div class="col-1 s4">
+              <div class="">
+                <label>
+                  <input class="check" type="checkbox" id="bookcheck">
+                  <span for="book-op">Book</span>
+                </label>
+              </div>
+            </div>
+            <div class="col-1 s4">
+              <div class="">
+                <label>
+                  <input class="check" type="checkbox" id="moviecheck">
+                  <span for="movie-op">Movie</span>
+                </label>
+              </div>
+            </div>
+            <div class="col-1 s4">
+              <div class="">
+                <label>
+                  <input class="check" type="checkbox" id="gamecheck">
 
-<span>Game</span>
-</label>
-</div>
-</div>
-</div>
+                  <span>Game</span>
+                </label>
+              </div>
+            </div>
+          </div>
 
-<div class="accordion" id="accordionExample">
-<div class="accordion-item">
-<h2 class="accordion-header" id="headingOne">
-<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-aria-expanded="false" aria-controls="collapseOne">
-<i class="fa fa-book fs-2 pt-0 me-3"></i> BOOKS <span class="ms-4 text-success bookresults"></span>
-</button>
-</h2>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                  aria-expanded="false" aria-controls="collapseOne">
+                  <i class="fa fa-book fs-2 pt-0 me-3"></i> BOOKS <span class="ms-4 text-success bookresults"></span>
+                </button>
+              </h2>
 
-<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-data-bs-parent="#accordionExample">
-<div class="accordion-body" id="booksdiv">
-</div>
-</div>
-</div>
-<div class="accordion-item">
-<h2 class="accordion-header" id="headingTwo">
-<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-<i class="fa fa-gamepad fs-2 pt-0 me-3"></i> GAMES <span class="ms-4 text-success gameresults"></span>
-</button>
-</h2>
-<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-data-bs-parent="#accordionExample">
-<div class="accordion-body mb-4" id="gamesdiv">
+              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body" id="booksdiv">
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <i class="fa fa-gamepad fs-2 pt-0 me-3"></i> GAMES <span class="ms-4 text-success gameresults"></span>
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body mb-4" id="gamesdiv">
 
-</div>
-</div>
-</div>
-<div class="accordion-item">
-<h2 class="accordion-header" id="headingThree">
-<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-<i class="fa fa-film fs-2 pt-0 me-3"></i> MOVIES <span class="ms-3 text-success movieresults"></span>
-</button>
-</h2>
-<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-data-bs-parent="#accordionExample">
-<div class="accordion-body" id="moviesdiv">
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <i class="fa fa-film fs-2 pt-0 me-3"></i> MOVIES <span class="ms-3 text-success movieresults"></span>
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body" id="moviesdiv">
 
-</div>
-</div>
-</div>
-</div>
-</main>
-<footer class="row bg-TRANSPARENT py-4 mt-auto">
-<div class="col text-center">
-<p class="fs-1 text-success">Footer Here</p>
-</div>
-</footer>
-</div>
-</div>
-</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
+       
+      </div>
+    </div>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.js"
-integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="JS/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <script src="JS/app.js"></script>
 </body>
 
 </html>
